--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
   </p>
 </div>
 <div class="container">
-  <span style="font-size: 22px; font-weight: 550">Check your knowledge  <a href="/DC_Training/quiz_1.html" class="fa fa-lg fa-arrow-right" style="color: #666"></a></span>
+  <span style="font-size: 22px; font-weight: 550">Check your knowledge  <a href="quiz_1.html" class="fa fa-lg fa-arrow-right" style="color: #666"></a></span>
 </div>
 <script>
   var toggler = document.getElementsByClassName("caret");
