--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link href="styles/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-<body style="font-family: Courier New">
+<body>
   <nav align="center" class="socialbtns">
     <ul class="socialbtns">
-      <li><a href="/agenda.html" class="fa fa-lg fa-home" style="background-color: #666; color: #fff;" title="Home"></a></li>
-      <li><a href="/dc1.html" class="fa fa-info-circle" title="Introduction"></a></li>
-      <li><a href="/dc2.html" class="fa fa-tasks" title="Processes"></a></li>
-      <li><a href="/dc3.html" class="fa fa-database" title="EDMS"></a></li>
-      <li><a href="/dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
-      <li><a href="/dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
-      <li><a href="/dc6-qr.html" class="fa fa-lg fa-code" title="Code"></a></li>
+      <li><a href="index.html" class="fa fa-lg fa-home" style="background-color: #666; color: #fff;" title="Home"></a></li>
+      <li><a href="dc1.html" class="fa fa-info-circle" title="Introduction"></a></li>
+      <li><a href="dc2.html" class="fa fa-tasks" title="Processes"></a></li>
+      <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
+      <li><a href="dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
+      <li><a href="dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
+      <li><a href="quiz_1.html" class="fa fa-lg fa-code" title="Code"></a></li>
     </ul>
   </nav>
   <h1>DC Basic Course - Agenda</h1>
@@ -24,7 +24,7 @@
     <ul id="myUL">
       <li><span class="" style="font-weight: 550; font-size: 20px; line-height: 30px;"> Course Agenda</span><br>
         <ol class="">
-          <li><a href="/dc1.html"><span class="" style="font-size: 18px; line-height: 20px; font-weight: 550;"> Introduction to Document Control</span></a>
+          <li><a href="dc1.html"><span class="" style="font-size: 18px; line-height: 20px; font-weight: 550;"> Introduction to Document Control</span></a>
             <ul class="">
               <li>Course Introduction and Overview</li>
               <li>Basics of Document Control</li>
@@ -33,7 +33,7 @@
               <li>Document Types and Classification</li>
             </ul>
           </li>
-          <li><a href="/dc2.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Document Control Processes</span></a>
+          <li><a href="dc2.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Document Control Processes</span></a>
             <ul class="">
               <li>Document Identification and Numbering</li>
               <li>Document Creation and Review</li>
@@ -42,7 +42,7 @@
               <li>Document Obsoletion and Archiving</li>
             </ul>
           </li>
-          <li><a href="/dc3.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Electronic Document Management Systems (EDMS)</span></a>
+          <li><a href="dc3.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Electronic Document Management Systems (EDMS)</span></a>
             <ul class="">
               <li>Introduction to EDMS</li>
               <li>Implementing an EDMS</li>
@@ -50,7 +50,7 @@
               <li>Document Control in an EDMS</li>
             </ul>
           </li>
-          <li><a href="/dc4.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Compliance and Quality Assurance</span></a>
+          <li><a href="dc4.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Compliance and Quality Assurance</span></a>
             <ul class="">
               <li>Regulatory Compliance and Standards</li>
               <li>Quality Management Systems (QMS)</li>
@@ -58,7 +58,7 @@
               <li>Continuous Improvement in Document Control</li>
             </ul>
           </li>
-          <li><a href="/dc5.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;">Document Control Best Practices</span></a>
+          <li><a href="dc5.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;">Document Control Best Practices</span></a>
             <ul class="">
               <li>Document Control Best Practices</li>
               <li>Document Control Performance Metrics</li>
