--- a/dc1.html
+++ b/dc1.html
@@ -10,13 +10,13 @@
   <body>
     <nav align="center" class="socialbtns">
       <ul>
-        <li><a href="/DC_Training/agenda.html" class="fa fa-lg fa-home" title="Home"></a></li>
-        <li><a href="/DC_Training/dc1.html" class="fa fa-info-circle" style="background-color: #666; color: #fff;" title="Introduction"></a></li>
-        <li><a href="/DC_Training/dc2.html" class="fa fa-tasks" title="Processes"></a></li>
-        <li><a href="/DC_Training/dc3.html" class="fa fa-database" title="EDMS"></a></li>
-        <li><a href="/DC_Training/dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
-        <li><a href="/DC_Training/dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
-        <li><a href="/DC_Training/dc6-qr.html" class="fa fa-lg fa-code" title="Code"></a></li>
+        <li><a href="index.html" class="fa fa-lg fa-home" title="Home"></a></li>
+        <li><a href="dc1.html" class="fa fa-info-circle" style="background-color: #666; color: #fff;" title="Introduction"></a></li>
+        <li><a href="dc2.html" class="fa fa-tasks" title="Processes"></a></li>
+        <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
+        <li><a href="dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
+        <li><a href="dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
+        <li><a href="quiz_1.html" class="fa fa-lg fa-code" title="Code"></a></li>
       </ul>
     </nav>
       <h1>Document Controller Basic Course</h1>
