--- a/quiz_1.html
+++ b/quiz_1.html
@@ -4,9 +4,195 @@
   <title>DC Basic Course - Quiz</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="styles/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+<style>
+  body {
+    background-color: #fff;
+    font-family: Candara, sans-serif;
+    color: #666;
+  }
+
+  nav {
+    background: #fff;
+    position: flex;
+    overflow: nonscroll;
+    top: 0;
+    height: 10%
+    width: 100%;
+  }
+
+  a, a:hover {
+    text-decoration: none;
+  }
+
+  .socialbtns, .socialbtns ul, .socialbtns li {
+    margin: 0;
+    padding: 0;
+    height: auto;
+  }
+
+  .socialbtns li {
+    list-style: none outside none;
+    display: inline-block;
+    padding: 5px;
+  }
+
+  .socialbtns .fa {
+    color: #666;
+    background-color: #fff;
+    box-shadow: -10px -5px 25px #fff, -10px 10px 20px #ddd;
+    width: 40px;
+    height: 28px;
+    padding-top: 12px;
+    border-radius: 30px;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -o-border-radius: 30px;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+  }
+
+  .socialbtns .fa:hover {
+    text-shadow: inset 10px 10px 10px #000;
+    box-shadow: -10px -5px 25px #ccc, -10px 10px 25px #fff;
+    background-color: #666;
+    color: #fff;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+  }
+    
+  .container {
+    background-color: #fff;
+    border-radius: 80px;
+    text-shadow: 5px 5px 5px #eee;
+    box-shadow:  -10px -5px 50px #eee, 10px 10px 50px #ddd;
+    margin: 50px auto;
+    max-inline-size: 550px;
+    padding: 50px;
+    align-items: center;
+  }
+  
+  h1 {
+    margin: 50px auto;
+    font-family: Impact;
+    text-align: center;
+    color: #666;
+    margin-block-end: 30px;
+    font-weight: 550;
+    text-shadow: 5px 5px 5px rgb(180, 170, 185);
+  }
+  
+  #question {
+    font-size: 18px;
+    margin-block-start: 25px;
+    margin-block-end: 25px;
+    font-weight: 550;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+  
+  #answers {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    text-indent: -30px;
+    padding-inline-start: 70px;
+    padding-inline-end: 30px;
+  }
+  
+  label {
+    display: block;
+    margin-block-end: 10px;
+  }
+  
+  input[type="radio"] {
+    margin-inline-end: 10px;
+  }
+  
+  #submit {
+    margin: 10px auto;
+    font-family: Candara;
+    background-color: #fff;
+    color: #666;
+    border: solid #666;
+    border-radius: 20px;
+    font-size: 14px;
+    width: 100px;
+    height: 50px;
+    font-weight: 550;
+    text-shadow: 1px 1px 1px #fff;
+  }
+  
+  #submit:hover {
+    font-family: Impact;
+    background-color: #fff;
+    color: #666;
+    border: double #666;
+    font-size: 18px;
+    border-radius: 20px;
+    text-shadow: 1px 1px 1px #ddd;
+  }
+   
+  #score {
+    color: #333        ;
+    font-size: 30px;
+    margin: 20px auto;
+    text-align: center;
+    padding: 20px auto;
+    text-shadow: -10px -5px 25px #fff, -10px 10px 20px #ddd;
+  }
+  
+  button {
+    margin: 30px auto;
+    font-family: Impact;
+    background-color: #fff;
+    color: #666;
+    border: solid #666;
+    border-radius: 20px;
+    font-size: 20px;
+    padding: 0;
+    width: 100px;
+    height: 50px;
+    font-weight: 550;
+    text-shadow: 1px 1px 1px #fff;
+    box-shadow:  -10px -5px 50px #eee, 10px 10px 50px #ddd;
+  }
+
+  .btn {
+    border: none;
+    color: #666;
+    display: inline-block;
+    margin: 1px auto;
+    border-radius: 50%;
+    inline-size: 100px;
+    block-size: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    cursor: pointer;
+    text-shadow: 2px 2px 1px rgb(255, 255, 255);
+    box-shadow: -10px -5px 25px #fff, -10px 10px 20px #ddd;
+  }
+
+    /* Darker background on mouse-over */
+  .btn:hover {
+    font-weight: 550;
+    text-shadow: 2px 2px 1px rgba(179, 192, 179, 0.9); 
+  }
+</style>
 <body>
   <nav align="center" class="socialbtns">
     <ul class="socialbtns">
@@ -16,7 +202,7 @@
       <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
       <li><a href="dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
       <li><a href="dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
-      <li><a href="quiz_1.html" class="fa fa-lg fa-code" style="background-color: #666; color: #fff;" title="Code"></a></li>
+      <li><a href="quiz_1.html" class="fa fa-medal" style="background-color: #666; color: #fff;" title="Quiz"></a></li>
     </ul>
   </nav>
   <h1>DC Basic Course - Quiz</h1>
