--- a/dc2.html
+++ b/dc2.html
@@ -16,7 +16,7 @@
         <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
         <li><a href="dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
         <li><a href="dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
-        <li><a href="quiz_1.html" class="fa fa-lg fa-code" title="Code"></a></li>
+        <li><a href="quiz_1.html" class="fa fa-medal" title="Quiz"></a></li>
       </ul>
     </nav>
       <h1>Document Control Processes</h1>
