--- a/dc3.html
+++ b/dc3.html
@@ -12,8 +12,8 @@
       <ul>
         <li><a href="index.html" class="fa fa-lg fa-home" title="Home"></a></li>
         <li><a href="dc1.html" class="fa fa-info-circle" title="Introduction"></a></li>
-        <li><a href="dc2.html" class="fa fa-tasks" style="background-color: #666; color: #fff;" title="Processes"></a></li>
-        <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
+        <li><a href="dc2.html" class="fa fa-tasks" title="Processes"></a></li>
+        <li><a href="dc3.html" class="fa fa-database" style="background-color: #666; color: #fff;" title="EDMS"></a></li>
         <li><a href="dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
         <li><a href="dc5.html" class="fa fa-lightbulb" title="Practices"></a></li>
         <li><a href="quiz_1.html" class="fa fa-medal" title="Quiz"></a></li>
