--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
           </li>
           <li><a href="dc3.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Electronic Document Management Systems (EDMS)</span></a>
             <ul class="">
-              <li>Introduction to EDMS</li>
-              <li>Implementing an EDMS</li>
-              <li>EDMS Administration and User Roles</li>
-              <li>Document Control in an EDMS</li>
+              <li>Introduction to EDMS
+                <ul class="">
+                  <li>Understanding EDMS</li>
+                  <li>Key Features of EDMS</li>
+                  <li>Implementing an EDMS</li>
+                  <li>Best Practices for Using EDMS</li>
+                  <li>Challenges and Solutions in EDMS Implementation</li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li><a href="dc4.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Compliance and Quality Assurance</span></a>
