--- a/dc1.html
+++ b/dc1.html
@@ -10,8 +10,8 @@
   <body>
     <nav align="center" class="socialbtns">
       <ul>
-        <li><a href="index.html" class="fa fa-lg fa-home" title="Home"></a></li>
-        <li><a href="dc1.html" class="fa fa-info-circle" style="background-color: #666; color: #fff;" title="Introduction"></a></li>
+        <li><a href="index.html" class="fa fa-home" title="Home"></a></li>
+        <li><a href="dc1.html" class="fa  fa-lg fa-info-circle" style="background-color: #666; color: #fff;" title="Introduction"></a></li>
         <li><a href="dc2.html" class="fa fa-tasks" title="Processes"></a></li>
         <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
         <li><a href="dc4.html" class="fa fa-shield-alt" title="Quality"></a></li>
@@ -21,18 +21,18 @@
     </nav>
       <h1>Document Controller Basic Course</h1>
     <div class="container">
-      <p><span style="font-size: 22px; font-weight: 550">Course Introduction</span>
+      <p><span style="font-size: 22px; font-weight: 550;">Course Introduction</span>
       <br><br>
       Welcome to the Document Controller Training course.<br><br> This comprehensive training program is designed to equip you all with the knowledge and skills required to effectively manage documents in various industries and ensure compliance with relevant standards and regulations.<br><br> Whether you are a new document controller seeking a solid foundation or an experienced professional looking to enhance your skills, this course will provide you with the necessary tools and best practices to excel in your role.
       <br><br>
       Now, let's move on to understanding what this training is all about.<br><br> In this session, I will provide you with an overview of the course, including the objectives, topics covered, and the benefits you can expect from mastering effective document control.
     </div>
     <div class="container">
-      <span style="font-size: 22px; font-weight: 550">Overview</span>
+      <span style="font-size: 22px; font-weight: 550;">Overview</span>
       <br><br>
       Document control plays a critical role in various industries by ensuring the effective management, organization, and accessibility of documents and information.<br><br> Regardless of the sector, be it healthcare, construction, manufacturing, finance, or any other industry, document control is essential for maintaining operational efficiency, regulatory compliance, quality assurance, and risk mitigation.
       <br><br>
-      <span style="font-size: 22px; font-weight: 550">Course Objectives</span>
+      <span style="font-size: 22px; font-weight: 550;">Course Objectives</span>
       <br>
       <ul>
         <li>Understand the fundamental principles and importance of document control.</li>
@@ -68,10 +68,16 @@
                     </ul>
                   <li><span class="caret" style="font-size: 18px; line-height: 30px;">Electronic Document Management Systems (EDMS)</span>
                     <ul class="nested">
-                      <li>Introduction to EDMS</li>
-                      <li>Implementing an EDMS</li>
-                      <li>EDMS Administration and User Roles</li>
-                      <li>Document Control in an EDMS</li>
+                      <li>Introduction to EDMS
+                          <ul class="nested">
+                            <li>Understanding EDMS</li>
+                            <li>Key Features of EDMS</li>
+                            <li>Implementing an EDMS</li>
+                            <li>Best Practices for Using EDMS</li>
+                            <li>Challenges and Solutions in EDMS Implementation</li>
+                          </ul>
+                      </li>
+                      <li>Higher Management Role</li>
                     </ul>
                   <li><span class="caret" style="font-size: 18px; line-height: 30px;">Compliance and Quality Assurance</span>
                     <ul class="nested">
@@ -95,7 +101,7 @@
             </ul>
           </div>
           <div class="container">
-            <span style="font-size: 22px; font-weight: 550">Basics of Document Control</span>
+            <span style="font-size: 22px; font-weight: 550;">Basics of Document Control</span>
             <br>
             <br>
             Let's begin by understanding what document control is and why it is crucial for organizations.
@@ -110,22 +116,22 @@
             In the document control role, you will be responsible for managing documents, ensuring their accuracy, and facilitating smooth access to information for various stakeholders.
           </div>
           <div class="container">
-            <span style="font-size: 22px; font-weight: 550">Document Control Systems</span>
+            <span style="font-size: 22px; font-weight: 550;">Document Control Systems</span>
             <br>
             <br>
-            Now, let's delve into different document control systems used in organizations.<br><br>There are two main types: <span style="font-weight: 550">
+            Now, let's delve into different document control systems used in organizations.<br><br>There are two main types: <span style="font-weight: 550;">
               <ol>
                 <li>Manual Systems 
                 <li>Electronic Document Management Systems</li>
               </ol></span>
             <br>
-            <span style="font-size: 16px; font-weight: 550">Manual systems</span> involve physical documents, such as paper-based filing systems or spreadsheets. While manual systems can work for smaller organizations, they may become cumbersome and inefficient as the volume of documents grows.
+            <span style="font-size: 16px; font-weight: 550;">Manual systems</span> involve physical documents, such as paper-based filing systems or spreadsheets. While manual systems can work for smaller organizations, they may become cumbersome and inefficient as the volume of documents grows.
             <br>
             <br>
-            On the other hand, <span style="font-size: 16px; font-weight: 550">Electronic Document Management Systems</span>, or EDMS, provide a more robust and efficient approach to document control.<br><br>EDMS allows for the digitization, storage, organization, and retrieval of documents in a centralized platform. It offers advantages such as enhanced searchability, version control, access control, and workflow automation.
+            On the other hand, <span style="font-size: 16px; font-weight: 550;">Electronic Document Management Systems</span>, or EDMS, provide a more robust and efficient approach to document control.<br><br>EDMS allows for the digitization, storage, organization, and retrieval of documents in a centralized platform. It offers advantages such as enhanced searchability, version control, access control, and workflow automation.
           </div>
           <div class="container">
-            <span style="font-size: 22px; font-weight: 550">Document Control Procedures</span>
+            <span style="font-size: 22px; font-weight: 550;">Document Control Procedures</span>
             <br>
             <br>
             Document control procedures are the backbone of an effective document control system. These procedures outline how documents are created, reviewed, approved, and distributed within the organization.
@@ -137,7 +143,7 @@
             Document control procedures should include guidelines on document naming conventions, review cycles, approval authorities, document retention, and archiving processes.
           </div>
           <div class="container">
-            <span style="font-size: 22px; font-weight: 550">Document Types and Classification</span>
+            <span style="font-size: 22px; font-weight: 550;">Document Types and Classification</span>
             <br>
             <br>
             Documents come in various types and formats, and it is essential to classify them appropriately for easy retrieval and organization. Common document types include policies, procedures, work instructions, specifications, reports, contracts, and more.
