--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container">
     <ul id="myUL">
       <li><span class="" style="font-weight: 550; font-size: 20px; line-height: 30px;"> Course Agenda</span><br>
-        <ol class="">
+        <ul class="">
           <li><a href="dc1.html"><span class="fa fa-lg fa-info-circle" style="font-size: 18px; line-height: 20px; font-weight: 550;"> Introduction to Document Control</span></a>
             <ul class="">
               <li>Course Introduction and Overview</li>
@@ -74,7 +74,7 @@
               <li>Course Conclusion and Evaluation</li>
             </ul>
           </li>
-        </ol>
+        </ul>
       </li>
     </ul>
   </div>
