--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div class="container">
     <ul id="myUL">
       <li><span class="" style="font-weight: 550; font-size: 20px; line-height: 30px;"> Course Agenda</span><br>
-        <ul class="">
-          <li><a href="dc1.html"><span class="fa fa-lg fa-info-circle" style="font-size: 18px; line-height: 20px; font-weight: 550;"> Introduction to Document Control</span></a>
+        <ol class="">
+          <li><a href="dc1.html"><span class="" style="font-size: 18px; line-height: 20px; font-weight: 550;"> Introduction to Document Control</span></a>
             <ul class="">
               <li>Course Introduction and Overview</li>
               <li>Basics of Document Control</li>
@@ -33,7 +33,7 @@
               <li>Document Types and Classification</li>
             </ul>
           </li>
-          <li><a href="dc2.html"><span class="fa fa-lg fa-tasks" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Document Control Processes</span></a>
+          <li><a href="dc2.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Document Control Processes</span></a>
             <ul class="">
               <li>Document Identification and Numbering</li>
               <li>Document Creation and Review</li>
@@ -42,7 +42,7 @@
               <li>Document Obsoletion and Archiving</li>
             </ul>
           </li>
-          <li><a href="dc3.html"><span class="fa fa-lg fa-database" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Electronic Document Management Systems (EDMS)</span></a>
+          <li><a href="dc3.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Electronic Document Management Systems (EDMS)</span></a>
             <ul class="">
               <li>Introduction to EDMS
                 <ul class="">
@@ -56,7 +56,7 @@
               <li>Higher Managements Role</li>
             </ul>
           </li>
-          <li><a href="dc4.html"><span class="fa fa-lg fa-shield-alt" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Compliance and Quality Assurance</span></a>
+          <li><a href="dc4.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Compliance and Quality Assurance</span></a>
             <ul class="">
               <li>Regulatory Compliance and Standards</li>
               <li>Quality Management Systems (QMS)</li>
@@ -64,7 +64,7 @@
               <li>Continuous Improvement in Document Control</li>
             </ul>
           </li>
-          <li><a href="dc5.html"><span class="fa fa-lg fa-medal" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Document Control Best Practices</span></a>
+          <li><a href="dc5.html"><span class="" style="font-weight: 550; font-size: 18px; line-height: 20px;"> Document Control Best Practices</span></a>
             <ul class="">
               <li>Document Control Best Practices</li>
               <li>Document Control Performance Metrics</li>
@@ -74,7 +74,7 @@
               <li>Course Conclusion and Evaluation</li>
             </ul>
           </li>
-        </ul>
+        </ol>
       </li>
     </ul>
   </div>
