--- a/dc1.html
+++ b/dc1.html
@@ -68,7 +68,7 @@
                     </ul>
                   <li><span class="caret" style="font-size: 18px; line-height: 30px;">Electronic Document Management Systems (EDMS)</span>
                     <ul class="nested">
-                      <li>Introduction to EDMS
+                      <li><span class="caret" style="font-size: 18px; line-height: 30px;">Introduction to EDMS)</span>
                           <ul class="nested">
                             <li>Understanding EDMS</li>
                             <li>Key Features of EDMS</li>
