--- a/dc3.html
+++ b/dc3.html
@@ -24,7 +24,7 @@
       <span style="font-size: 22px; font-weight: 550">Introduction to EDMS</span>
       <br>
       <p>
-        Let' explore the world of Electronic Document Management Systems (EDMS) and how they revolutionize document control.
+        Let's explore the world of Electronic Document Management Systems (EDMS) and how they revolutionize document control.
         <br><br>
         In this lesson, we will cover the basics of EDMS, including how these systems work, the benefits they offer, and the role of document controllers within an organization. By the end of this lesson, you will have a better understanding of the importance of EDMS in document management and how document controllers can effectively utilize these systems to streamline business processes.
         <br><br>
