--- a/dc3.html
+++ b/dc3.html
@@ -56,7 +56,7 @@
             <ul>
               <li><span style="font-size: 16px; font-weight: 550">Needs Assessment, Vendor Selection, Planning: </span>While the final decision might be made by higher management, Document Controllers often provide critical input based on their understanding of document management needs.</li>
               <br>
-              <li><span style="font-size: 16px; font-weight: 550">Pilot Testing, Full Deployment: </span>Document Controllers may be involved in testing and rolling out the EDMS, ensuring it meets practical requirements.li>
+              <li><span style="font-size: 16px; font-weight: 550">Pilot Testing, Full Deployment: </span>Document Controllers may be involved in testing and rolling out the EDMS, ensuring it meets practical requirements.</li>
             </ul>
           </li>
           <br>
