--- a/dc5.html
+++ b/dc5.html
@@ -10,7 +10,7 @@
   <body>
     <nav align="center" class="socialbtns">
       <ul>
-        <li><a href="agenda.html" class="fa fa-lg fa-home" title="Home"></a></li>
+        <li><a href="index.html" class="fa fa-lg fa-home" title="Home"></a></li>
         <li><a href="dc1.html" class="fa fa-info-circle" title="Introduction"></a></li>
         <li><a href="dc2.html" class="fa fa-tasks" title="Processes"></a></li>
         <li><a href="dc3.html" class="fa fa-database" title="EDMS"></a></li>
